--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -15,5 +15,15 @@
         <br>
         <br>
         <b>数据管理-我的数据Amazon-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/associateSystemSkuInterface" target="_blank">运行</a>
+        <br>
+        <br>
+        <b>数据管理-我的数据Amazon-低价接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/productGenDijiaInterface" target="_blank">运行</a>
+        <br>
+        <br>
+        <b>数据管理-我的数据Amazon-同款接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/productGenTongkuanInterface" target="_blank">运行</a>
+        <br>
+        <br>
+        <b>数据管理-我的数据SMT-查询接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/selectProductInterface" target="_blank">运行</a>
+
     </body>
 </html>
