--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -17,5 +17,17 @@
         {% for associateItem in assSySkuResult%}
         {{associateItem}}<br>
         {% endfor %}
+        <h4>我的数据Amazon-低价接口</h4>
+        {% for amazonProDijiaItem in amazonProDijia%}
+        {{amazonProDijiaItem}}<br>
+        {% endfor %}
+        <h4>我的数据Amazon-同款接口</h4>
+        {% for amazonTongkuanItem in amazonTongkuan%}
+        {{amazonTongkuanItem}}<br>
+        {% endfor %}
+        <h4>我的数据SMT-查询接口</h4>
+        {% for smtSelectProductItem in smtSelectProduct%}
+        {{smtSelectProductItem}}<br>
+        {% endfor %}
     </body>
 </html>
