--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -29,5 +29,9 @@
         {% for smtSelectProductItem in smtSelectProduct%}
         {{smtSelectProductItem}}<br>
         {% endfor %}
+        <h4>我的数据SMT-释放产品接口</h4>
+        {% for smtReleaseProductItem in smtReleaseProduct%}
+        {{smtReleaseProductItem}}<br>
+        {% endfor %}
     </body>
 </html>
