新增数据分析SMT关联系统SKU接口

--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -33,5 +33,9 @@
         {% for smtReleaseProductItem in smtReleaseProduct%}
         {{smtReleaseProductItem}}<br>
         {% endfor %}
+        <h4>我的数据SMT-关联系统SKU接口</h4>
+        {% for smtAssSySkuResultItem in smtAssSySkuResult%}
+        {{smtAssSySkuResultItem}}<br>
+        {% endfor %}
     </body>
 </html>
