--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -27,6 +27,8 @@
         <br>
         <br>
         <b>数据管理-我的数据SMT-释放产品接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/releaseProductInterface" target="_blank">运行</a>
-
+        <br>
+        <br>
+        <b>数据管理-我的数据SMT-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/associateSystemSkuInterface" target="_blank">运行</a>
     </body>
 </html>
