--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -37,5 +37,9 @@
         {% for smtAssSySkuResultItem in smtAssSySkuResult%}
         {{smtAssSySkuResultItem}}<br>
         {% endfor %}
+        <h4>参数配置-取消开发备注保存接口</h4>
+        {% for paramConfigResultItem in paramConfigResult%}
+        {{paramConfigResultItem}}<br>
+        {% endfor %}
     </body>
 </html>
