新增参数配置-取消开发备注查询接口

--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -41,5 +41,11 @@
         {% for paramConfigResultItem in paramConfigResult%}
         {{paramConfigResultItem}}<br>
         {% endfor %}
+        <h4>参数配置-取消开发备注查询接口</h4>
+        {% for paramConfigQueryResultItem in paramConfigQueryResult%}
+        {{paramConfigQueryResultItem}}<br>
+        {% endfor %}
+
+
     </body>
 </html>
