--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -17,6 +17,9 @@
         <b>数据管理-我的数据Amazon-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/associateSystemSkuInterface" target="_blank">运行</a>
         <br>
         <br>
+        <b>数据管理-我的数据Amazon-取消开发接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/cancelDevelopment" target="_blank">运行</a>
+        <br>
+        <br>
         <b>数据管理-我的数据Amazon-低价接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/productGenDijiaInterface" target="_blank">运行</a>
         <br>
         <br>
@@ -36,5 +39,6 @@
         <br>
         <br>
         <b>参数配置-取消开发备注查询接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/parameterConfig/queryCancelDevNotesInfo" target="_blank">运行</a>
+
     </body>
 </html>
