--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -17,6 +17,10 @@
         {% for associateItem in assSySkuResult%}
         {{associateItem}}<br>
         {% endfor %}
+        <h4>我的数据Amazon-取消开发接口</h4>
+        {% for cancelDevelopResultItem in cancelDevelopResult%}
+        {{cancelDevelopResultItem}}<br>
+        {% endfor %}
         <h4>我的数据Amazon-低价接口</h4>
         {% for amazonProDijiaItem in amazonProDijia%}
         {{amazonProDijiaItem}}<br>
