--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -35,6 +35,12 @@
         <b>数据管理-我的数据SMT-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/associateSystemSkuInterface" target="_blank">运行</a>
         <br>
         <br>
+        <b>数据管理-我的数据SMT-低价接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/productGenDijiaInterface" target="_blank">运行</a>
+        <br>
+        <br>
+        <b>数据管理-我的数据SMT-同款接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/productGenTongkuanInterface" target="_blank">运行</a>
+        <br>
+        <br>
         <b>参数配置-取消开发备注保存接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/parameterConfig/updateCancelDevNotesInfo" target="_blank">运行</a>
         <br>
         <br>
