--- a/apps/Das/templates/das_error.html
+++ b/apps/Das/templates/das_error.html
@@ -41,6 +41,14 @@
         {% for smtAssSySkuResultItem in smtAssSySkuResult%}
         {{smtAssSySkuResultItem}}<br>
         {% endfor %}
+        <h4>我的数据SMT-低价接口</h4>
+        {% for smtProDijiaItem in smtProDijia%}
+        {{smtProDijiaItem}}<br>
+        {% endfor %}
+        <h4>我的数据SMT-同款接口</h4>
+        {% for smtTongkuanItem in smtTongkuan%}
+        {{smtTongkuanItem}}<br>
+        {% endfor %}
         <h4>参数配置-取消开发备注保存接口</h4>
         {% for paramConfigResultItem in paramConfigResult%}
         {{paramConfigResultItem}}<br>
