--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -8,43 +8,6 @@
         <h1>数据分析系统接口汇总</h1>
     </head>
     <body style="margin: 0px;">
-        <b>数据管理-我的数据Amazon-查询接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/selectInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据Amazon-释放产品接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/releaseRroductInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据Amazon-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/associateSystemSkuInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据Amazon-取消开发接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/cancelDevelopment" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据Amazon-低价接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/productGenDijiaInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据Amazon-同款接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/amazon/productGenTongkuanInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据SMT-查询接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/selectProductInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据SMT-释放产品接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/releaseProductInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据SMT-关联系统SKU接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/associateSystemSkuInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据SMT-低价接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/productGenDijiaInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>数据管理-我的数据SMT-同款接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/dataManage/smt/productGenTongkuanInterface" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>参数配置-取消开发备注保存接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/parameterConfig/updateCancelDevNotesInfo" target="_blank">运行</a>
-        <br>
-        <br>
-        <b>参数配置-取消开发备注查询接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/parameterConfig/queryCancelDevNotesInfo" target="_blank">运行</a>
-
+        <b>接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/allTestCase/execute" target="_blank">运行</a>
     </body>
 </html>
