--- a/apps/Das/templates/das_entry.html
+++ b/apps/Das/templates/das_entry.html
@@ -5,9 +5,9 @@
         数据分析系统
     </title>
     <head>
-        <h1>数据分析系统接口汇总</h1>
+        <h1>系统接口汇总</h1>
     </head>
     <body style="margin: 0px;">
-        <b>接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/allTestCase/execute" target="_blank">运行</a>
+        <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/allTestCase/execute" target="_blank">运行</a>
     </body>
 </html>
