--- a/apps/templates/das_entry.html
+++ b/apps/templates/das_entry.html
@@ -7,6 +7,7 @@
     <head>
         <h1>系统接口汇总</h1>
     </head>
+    <!--添加数据分析接口运行-->
     <body style="margin: 0px;">
         <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/allTestCase/execute" target="_blank">运行</a>
     </body>
