--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -9,6 +9,6 @@
     </head>
     <!--添加数据分析接口运行-->
     <body style="margin: 0px;">
-        <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "http://127.0.0.1:5000/das/allTestCase/execute" target="_blank">运行</a>
+        <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
     </body>
 </html>
