新增财务接口

--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang=en>
     <title>
-        数据分析系统
+        estone
     </title>
     <head>
         <h1>系统接口汇总</h1>
@@ -10,5 +10,8 @@
     <!--添加数据分析接口运行-->
     <body style="margin: 0px;">
         <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
+        <br /><br />
+        <b>财务系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
+        <br /><br />
     </body>
 </html>
