--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -1,17 +1,34 @@
-<!--数据分析系统所有接口入口-->
+<!--estone所有接口入口-->
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
+<meta charset="UTF-8">
     <title>
         estone
     </title>
-    <head>
-        <h1>系统接口汇总</h1>
-    </head>
+
     <!--添加数据分析接口运行-->
     <body style="margin: 0px;">
-        <b>数据分析系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
-        <br /><br />
-        <b>财务系统所有接口</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
-        <br /><br />
+    <div style ="width: 1200px;height: 1000px">
+         <div class="detail">
+            <head>
+                <h1>系统接口汇总</h1>
+            </head>
+            <span>数据分析系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span>财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+        </div>
+        <div class ="detail2">
+
+        </div>>
+    </div>>
     </body>
 </html>
+<style>
+    .detail{
+        display: inline-block;
+        background: url("../sources/777.jpg") no-repeat;
+        width: 100%;
+        height: 1000px;
+    }
+</style>
