--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -1,34 +1,68 @@
 <!--estone所有接口入口-->
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-    <title>
-        estone
-    </title>
-
-    <!--添加数据分析接口运行-->
-    <body style="margin: 0px;">
-    <div style ="width: 1200px;height: 1000px">
-         <div class="detail">
-            <head>
-                <h1>系统接口汇总</h1>
-            </head>
-            <span>数据分析系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="out">
+       <div class="fst">
+           <header class="read">
+                系统接口汇总
+            </header>
+            <br />
+            <span class="read">数据分析系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/das/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
-            <span>财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
+            <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
-        </div>
-        <div class ="detail2">
+       </div>
+       <div class="scd"></div>
 
-        </div>>
-    </div>>
-    </body>
-</html>
+    </div>
+</body>
 <style>
-    .detail{
-        display: inline-block;
-        background: url("../sources/777.jpg") no-repeat;
-        width: 100%;
-        height: 1000px;
+    body, div, address, blockquote, iframe, ul, ol, dl, dt,
+dd, li, dl, h1, h2, h3, h4, pre, table, caption, th, td, form,
+legend, fieldset, input, button, select, textarea {margin:0;
+padding:0;font-style: normal;font:12px/22px Arial, Helvetica, sans-serif;}
+ol, ul ,li{list-style: none;}
+ol, ul ,li{list-style: none;}
+img {border: 0; vertical-align:middle;}
+body{color:#000000;background:#FFF; text-align:center;}
+    .body {
+        padding: 0;
+        margin: 0;
     }
+    .out {
+        width: 2000px;
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+
+    }
+   .fst, .scd {
+       width: 50%;
+       height: 1000px;
+   }
+   .fst {
+       background:url(../sources/777.jpg) no-repeat;
+       background-size: 100% 100%;
+       text-align: left;
+       font-size: 20px;
+       font-weight: 700;
+   }
+   .scd {
+       background: url(../sources/666.jpg) no-repeat;
+       background-size: 100% 100%;
+   }
+    {#.fst .read{#}
+    {#    text-align: left;#}
+    {#    font-size: 20px;#}
+    {#    font-weight: 700;#}
+    {#}#}
+
 </style>
+</html>
