--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -19,7 +19,7 @@
             <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
        </div>
-       <div class="scd"></div>
+
 
     </div>
 </body>
@@ -44,18 +44,19 @@ body{color:#000000;background:#FFF; text-align:center;}
 
     }
    .fst, .scd {
-       width: 50%;
+       width: 100%;
        height: 1000px;
    }
    .fst {
-       background:url(../sources/777.jpg) no-repeat;
+       background:url(../sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
        text-align: left;
        font-size: 20px;
        font-weight: 700;
+       color: #FFFFFF;
    }
    .scd {
-       background: url(../sources/666.jpg) no-repeat;
+       background: url(../sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
    }
     {#.fst .read{#}
