--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -10,7 +10,8 @@
 <body>
     <div class="out">
        <div class="fst">
-           <header class="read">
+           <header class="titl">
+                <br />
                 系统接口汇总
             </header>
             <br />
@@ -47,10 +48,16 @@ body{color:#000000;background:#FFF; text-align:center;}
        width: 100%;
        height: 1000px;
    }
+   .fst .titl{
+       text-align: center;
+       font-size: 30px;
+       font-weight: 700;
+       color: #FFFFFF;
+   }
    .fst {
        background:url(../sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
-       text-align: left;
+       text-align: center;
        font-size: 20px;
        font-weight: 700;
        color: #FFFFFF;
