--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -33,6 +33,9 @@ ol, ul ,li{list-style: none;}
 ol, ul ,li{list-style: none;}
 img {border: 0; vertical-align:middle;}
 body{color:#000000;background:#FFF; text-align:center;}
+a {
+        text-decoration: none;
+    }
     .body {
         padding: 0;
         margin: 0;
@@ -52,7 +55,7 @@ body{color:#000000;background:#FFF; text-align:center;}
        text-align: center;
        font-size: 30px;
        font-weight: 700;
-       color: #FFFFFF;
+       color: #000000;
    }
    .fst {
        background:url(../sources/888.jpeg) no-repeat;
@@ -60,17 +63,19 @@ body{color:#000000;background:#FFF; text-align:center;}
        text-align: center;
        font-size: 20px;
        font-weight: 700;
-       color: #FFFFFF;
+       color: #000000;
    }
    .scd {
        background: url(../sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
    }
-    {#.fst .read{#}
-    {#    text-align: left;#}
-    {#    font-size: 20px;#}
-    {#    font-weight: 700;#}
-    {#}#}
+    .fst .read{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 700;
+
+    }
+
 
 </style>
 </html>
