--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src='../Fmis/static/js/Special_Effects.js'></script>
 <body>
     <div class="out">
        <div class="fst">
