优化前端代码

--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src='../Fmis/static/js/Special_Effects.js'></script>
+<script src='../static/js/Special_Effects.js'></script>
 <body>
     <div class="out">
        <div class="fst">
@@ -21,8 +21,6 @@
             <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
        </div>
-
-
     </div>
 </body>
 <style>
@@ -59,7 +57,7 @@ a {
        color: #000000;
    }
    .fst {
-       background:url(../sources/888.jpeg) no-repeat;
+       background:url(../static/sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
        text-align: center;
        font-size: 20px;
@@ -67,7 +65,7 @@ a {
        color: #000000;
    }
    .scd {
-       background: url(../sources/888.jpeg) no-repeat;
+       background: url(../static/sources/888.jpeg) no-repeat;
        background-size: 100% 100%;
    }
     .fst .read{
