新增人员登录

--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -20,6 +20,7 @@
             <br /><br />
             <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
+            <span class="read">欢迎您！</span>    <a href="/logout" target="_blank">{{ username }}</a>
        </div>
     </div>
 </body>
