--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -10,7 +10,7 @@
 
 <html>
     <body>
-        <form action="http://localhost:5000/login" method="post">
+        <form action="" method="post">
             <p>姓名:<input type="text" name="name"></p>
             <p><input type="submit" value="submit"></p>
         </form>
