新增登录退出校验

--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>接口测试</title>
 </head>
 <script src='../static/js/Special_Effects.js'></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
