--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="loginPage" content="width=device-width, initial-scale=1.0">
+    <title>接口测试</title>
 </head>
 
 <html>
     <body>
         <form action="" method="post">
-            <p>姓名:<input type="text" name="name"></p>
+            <p>姓名:<input type="text" name="name" /></p>
+            <p>密码:<input type="text" name="password" /></p>
             <p><input type="submit" value="submit"></p>
         </form>
     </body>
