--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -15,7 +15,7 @@
             <p>密码:<input type="text" name="password" /></p>
             <p><input type="submit" value="submit"></p>
             {% if error %}
-            <p><strong>Error:</strong>{{ error }}</p>
+                <p style="color:#FF0000"><strong>Error:{{ error }}</strong></p>
             {% endif %}
         </form>
     </body>
