--- a/apps/templates/system_report.html
+++ b/apps/templates/system_report.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <span class="read">数据分析系统接口报告</span>
-    <a href={{ das_url }}>访问数据分析测试用例报告 </a>
+    <span class="read">数据分析系统接口报告地址:</span>
+    <a href={{ das_report_url }}>点击查看 </a>
 </body>
 </html>
