--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -19,7 +19,9 @@
             <br />
             <span class="read">数据分析系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "/interfaceTest/das/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
-            <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/fmis/allTestCase/execute" target="_blank">运行</a>
+            <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/fmis/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span class="read">新用户系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/usermgt/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
             <span class="read">欢迎您！{{ session.username }}</span>  <button id="logout">注销</button>
        </div>
