--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -21,6 +21,16 @@
             <br /><br />
             <span class="read">财务系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/fmis/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
+            <span class="read">订单系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/sale/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span class="read">产品系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/product/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span class="read">采购系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/pms/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span class="read">物流系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/tms/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
+            <span class="read">仓库系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/wms/allTestCase/execute" target="_blank">运行</a>
+            <br /><br />
             <span class="read">新用户系统所有接口</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/interfaceTest/usermgt/allTestCase/execute" target="_blank">运行</a>
             <br /><br />
             <span class="read">欢迎您！{{ session.username }}</span>  <button id="logout">注销</button>
