--- a/apps/templates/system_report.html
+++ b/apps/templates/system_report.html
@@ -7,5 +7,19 @@
 <body>
     <span class="read">数据分析系统接口报告地址:</span>
     <a href={{ das_report_url }}>点击查看 </a>
+    <span class="read">财务系统接口接口报告地址:</span>
+    <a href={{ fmis_report_url }}>点击查看 </a>
+    <span class="read">订单系统接口报告地址:</span>
+    <a href={{ sale_report_url }}>点击查看 </a>
+    <span class="read">产品系统接口报告地址:</span>
+    <a href={{ product_report_url }}>点击查看 </a>
+    <span class="read">采购系统接口报告地址:</span>
+    <a href={{ pms_report_url }}>点击查看 </a>
+    <span class="read">物流系统接口报告地址:</span>
+    <a href={{ tms_report_url }}>点击查看 </a>
+    <span class="read">仓库系统接口报告地址:</span>
+    <a href={{ wms_report_url }}>点击查看 </a>
+    <span class="read">新用户系统接口报告地址:</span>
+    <a href={{ usermgt_report_url }}>点击查看 </a>
 </body>
 </html>
