修改前端文件

--- a/apps/templates/system_entry.html
+++ b/apps/templates/system_entry.html
@@ -51,7 +51,7 @@
         })
     })
 
-    console.log(window.location.href,'666')
+    console.log(window.location.href)
     </script>
 
 </body>
