--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -11,12 +11,16 @@
 <html>
     <body>
         <form action="" method="post">
-            <p>姓名:<input type="text" name="name" /></p>
+            <p>姓名:<input type="text" name="username" /></p>
             <p>密码:<input type="text" name="password" /></p>
-            <p><input type="submit" value="submit"></p>
+            <p><input type="submit" value="登录"> <a href="{{ url_for('register') }}">注册</a> </p>
             {% if error %}
                 <p style="color:#FF0000"><strong>Error:{{ error }}</strong></p>
             {% endif %}
+            {% if message %}
+                <p style=""><strong>提示:{{ message }}</strong></p>
+            {% endif %}
         </form>
     </body>
+
 </html>
